--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 /out/
 
 # production
-/build
+# /build
 
 # misc
 .DS_Store
@@ -31,14 +31,14 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # vercel
-.vercel
+# .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
 
-.genkit/*
-.env*
+# .genkit/*
+# .env*
 
 # firebase
 firebase-debug.log
